First commited as before_46457_rev1